crates/solidity/testing/snapshots/bindings_output/using/top_level/v2/generated/0.6.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
    ╭─[input.sol:5:1]
    │
  5 │ ╭─▶ function increment(Counter memory _counter) public {}
    ┆ ┆   
 13 │ ├─▶ }
    │ │       
    │ ╰─────── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (2):
- Def: #1 ["Counter" @ input.sol:1:8] (struct)
- Def: #2 ["value" @ input.sol:2:10] (struct member, type: uint256)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ struct Counter {
   │        ───┬───  
   │           ╰───── name: 1
 2 │     uint value;
   │          ──┬──  
   │            ╰──── name: 2
───╯
